--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "main": "test/index.js",
     "license": "MIT",
     "scripts": {
-        "test": "mocha --timeout 5000"
+        "test": "mocha --timeout 5000",
+        "build": "npx hardhat compile"
     },
     "dependencies": {
         "big.js": "^5.2.2",
         "chai": "^4.2.0",
         "fs-extra": "^8.1.0",
+        "hardhat": "^2.11.1",
         "keccak": "^3.0.0",
         "mocha": "^7.0.1",
         "qtumjs": "https://github.com/TheLindaProjectInc/qtumjs.git",
